feat: get user detail
